--- a/index.html
+++ b/index.html
@@ -1,11 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>S</title>
+    <title>Apurba Roy Anik</title>
+    <link rel="shortcut icon" href="photoes/apurba1.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    
+
+    <header class="container d-flex ">
+        <nav style="background-color: rgb(225, 255, 141);" class="navbar fixed-top navbar-expand-lg navbar-light mx-5">
+            <div class="container-fluid">
+                <div>
+                    <a class="navbar-brand" href="#">
+                        <img style="height: 40px;" src="photoes/apurba2.png" alt="">
+                    </a>
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Personal Information</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Contact Information</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Educational Qualification</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Experience</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main class="container mt-5 panda-slide">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+              <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <div class="row d-flex align-items-center p-5 ">
+                    <div class="col-md-7 p-5">
+                        <h1>
+                            #Diligent
+                        </h1>
+                        <p>
+                            I always try to be a hard worker with smart working skills !!
+                        </p>
+                    </div>
+                    <div class="col-md-5">
+                        <img src="photoes/12.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row d-flex align-items-center p-5 ">
+                    <div class="col-md-7">
+
+                    </div>
+                    <div class="col-md-5">
+                        <img src="photoes/1.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <div class="row d-flex align-items-center p-5 ">
+                    <div class="col-md-7">
+
+                    </div>
+                    <div class="col-md-5">
+                        <img src="photoes/2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                </div>
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </a>
+          </div>
+    </main>
+    <script src="js/bootstrap.min.js"></script>
 </body>
+
 </html>
